# qml-qtl-pytorch-mnist

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: evaluate_hybrid_model.py  evaluate_model.py  evaluate_pl_model.py  evaluate_qk_model.py  load_data.py  run_benchmark.py  train_hybrid_model.py  train_model.py  train_pl_model.py  train_qk_model.py  visualize_dataset.py
src/qml_qtl_pytorch_mnist/: __init__.py
src/qml_qtl_pytorch_mnist/classical/: data.py
src/qml_qtl_pytorch_mnist/data/: __init__.py  data_loader.py  data_processor.py  dataloader.py  dataset.py
src/qml_qtl_pytorch_mnist/metrics/: __init__.py  evaluation.py  evaluation_metrics.py
src/qml_qtl_pytorch_mnist/model/: backbone.py  classifier.py  post_net.py  pre_net.py
src/qml_qtl_pytorch_mnist/models/: classifier.py  hybrid_classifier.py
src/qml_qtl_pytorch_mnist/models/backbone/: __init__.py  base_backbone.py  classical_backbone.py  quantum_backbone_pennylane.py  quantum_backbone_qiskit.py
src/qml_qtl_pytorch_mnist/visualization/: visualizer.py
