[project]
name = "qml-qtl-pytorch-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kaue Miziara", email = "kauemiziara@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
