[project]
name = "qml-qtl-pytorch-mnist"
version = "3.0"
description = "PyTorch and PennyLane/Qiskit integration test"
readme = "README.md"
authors = [{ name = "Kaue Miziara", email = "kauemiziara@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pennylane>=0.44.0",
    "qiskit>=2.3.0",
    "qiskit-machine-learning>=0.9.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.14"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "UP"]

ignore = ["E741", "N806"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
